align pin fix

--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ section {
 #pin {
   height: 1em;
   width: auto;
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 
 #mapa {
